add navbar small screen

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav class="navbar">
-        <div>
+        <div class="mobileNav">
         <a href="index.html">
                 <img src="images/logo-udemy.svg" alt="udemy" width="91" height="34">
         </a>
@@ -30,7 +30,8 @@
         <button class="LL">Log in</button>
         <button id="SignUp">Sign up</button>
         <button class="LL"><img src="images/globe.png" alt="globe" width="28" height="28"></button>
-        
+        <button class="mobileNav"><img src="images/menu.png" alt="menu" width="28" height="28" ></button>
     </nav>
+
 </body>
 </html>
