--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Udemy</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <nav class="navbar">
@@ -33,5 +34,92 @@
         <button class="mobileNav"><img src="images/menu.png" alt="menu" width="28" height="28" ></button>
     </nav>
 
+
+    <header>
+        <div><p>New to Udemy?Lucky you.</p>
+            <p style="font-size: 20px;font-weight: normal;">Courses start at $169.99.get your new-student offer before it expires.</p>
+        </div>
+        <img src="images/hourglass.png" alt="hourglass" width="20%" height="auto" style="margin-left: 10%;margin-right: 10%; margin-top: 5%;margin-bottom: 5%;">
+    </header>
+
+    <section>
+        <div id="Courses_head">
+            <h1 style="font-size:xx-large"> A broad selection of courses </h1>
+            <p style="font-size: larger;"> Choose from 185,000 online video courses with new additions published every month </p>
+            <div>
+                <button>Python</button>
+                <button>Excel</button>
+                <button>Web Development</button>
+                <button>JavaScript</button>
+                <button>Data Science</button>
+                <button>AWS Certification</button>
+                <button>Drawing</button>
+            </div>
+        </div>
+        <div id="main_courses">
+            <p style="font-size: large; font-weight: bolder;">Expand your career opportunities with Python</p>
+            <p style="width: 60%;font-size: large;">Take one of Udemy’s range of Python courses and learn how to code using this incredibly useful language. Its simple syntax and readability makes Python perfect for Flask, Django, data science, and machine learning. You’ll learn how to build everything from games to sites to apps. Choose from a range of courses that will appeal to...</p>
+            <button id="explore_course">Explore Python</button>
+            <br>
+            <div style="display: flex;">
+                <a class="course_card" href="https://www.google.com">
+                    <img src="images/Python1.jpg">
+                    <p>Learn Python: The Complete Python Programming Course</p>
+                    <p style="font-size: small;font-weight: lighter;">author</p>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star"></span>
+                    <span class="fa fa-star"></span>
+                    <p style="font-weight: bolder; font-size: large;">$999.9</p>
+                </a>
+                <a class="course_card" href="www.google.com">
+                    <img src="images/Python2.jpg">
+                    <p>Learning Python for Data Analysis and Visualization</p>
+                    <p style="font-size: small;font-weight: lighter;">author</p>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star"></span>
+                    <span class="fa fa-star"></span>
+                    <p style="font-weight: bolder; font-size: large;">$999.9</p>
+                </a>
+                <a class="course_card" href="www.google.com">
+                    <img src="images/Python3.jpg">
+                    <p>Python for Beginners - Learn Programming from scratch</p>
+                    <p style="font-size: small;font-weight: lighter;">author</p>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star"></span>
+                    <span class="fa fa-star"></span>
+                    <p style="font-weight: bolder; font-size: large;">$999.9</p>
+                </a>
+                <a class="course_card" href="www.google.com">
+                    <img src="images/Python4.jpg">
+                    <p>Learn Python: Python for Beginners</p>
+                    <p style="font-size: small;font-weight: lighter;">author</p>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star"></span>
+                    <span class="fa fa-star"></span>
+                    <p style="font-weight: bolder; font-size: large;">$999.9</p>
+                </a>
+                <a class="course_card" href="www.google.com">
+                    <img src="images/Python5.jpg">
+                    <p>Python Beyond the Basics - Object-Oriented Programming</p>
+                    <p style="font-size: small;font-weight: lighter;">author</p>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star"></span>
+                    <span class="fa fa-star"></span>
+                    <p style="font-weight: bolder; font-size: large;">$999.9</p>
+                </a>
+            </div style="display: flex;">
+        </div>
+
+        </section>
 </body>
 </html>
