--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div>
         <div id="main_courses">
             <p style="font-size: large; font-weight: bolder;">Expand your career opportunities with Python</p>
-            <p style="width: 60%;font-size: large;">Take one of Udemy’s range of Python courses and learn how to code using this incredibly useful language. Its simple syntax and readability makes Python perfect for Flask, Django, data science, and machine learning. You’ll learn how to build everything from games to sites to apps. Choose from a range of courses that will appeal to...</p>
+            <p id= "coursesP2">Take one of Udemy’s range of Python courses and learn how to code using this incredibly useful language. Its simple syntax and readability makes Python perfect for Flask, Django, data science, and machine learning. You’ll learn how to build everything from games to sites to apps. Choose from a range of courses that will appeal to...</p>
             <button id="explore_course">Explore Python</button>
             <br>
             <div style="display: flex;">
