--- a/index.html
+++ b/index.html
@@ -61,65 +61,11 @@
             <p id= "coursesP2">Take one of Udemy’s range of Python courses and learn how to code using this incredibly useful language. Its simple syntax and readability makes Python perfect for Flask, Django, data science, and machine learning. You’ll learn how to build everything from games to sites to apps. Choose from a range of courses that will appeal to...</p>
             <button id="explore_course">Explore Python</button>
             <br>
-            <div style="display: flex;">
-                <a class="course_card" href="https://www.google.com">
-                    <img src="images/Python1.jpg">
-                    <p>Learn Python: The Complete Python Programming Course</p>
-                    <p style="font-size: small;font-weight: lighter;">author</p>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star"></span>
-                    <span class="fa fa-star"></span>
-                    <p style="font-weight: bolder; font-size: large;">$999.9</p>
-                </a>
-                <a class="course_card" href="www.google.com">
-                    <img src="images/Python2.jpg">
-                    <p>Learning Python for Data Analysis and Visualization</p>
-                    <p style="font-size: small;font-weight: lighter;">author</p>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star"></span>
-                    <span class="fa fa-star"></span>
-                    <p style="font-weight: bolder; font-size: large;">$999.9</p>
-                </a>
-                <a class="course_card" href="www.google.com">
-                    <img src="images/Python3.jpg">
-                    <p>Python for Beginners - Learn Programming from scratch</p>
-                    <p style="font-size: small;font-weight: lighter;">author</p>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star"></span>
-                    <span class="fa fa-star"></span>
-                    <p style="font-weight: bolder; font-size: large;">$999.9</p>
-                </a>
-                <a class="course_card" href="www.google.com">
-                    <img src="images/Python4.jpg">
-                    <p>Learn Python: Python for Beginners</p>
-                    <p style="font-size: small;font-weight: lighter;">author</p>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star"></span>
-                    <span class="fa fa-star"></span>
-                    <p style="font-weight: bolder; font-size: large;">$999.9</p>
-                </a>
-                <a class="course_card" href="www.google.com">
-                    <img src="images/Python5.jpg">
-                    <p>Python Beyond the Basics - Object-Oriented Programming</p>
-                    <p style="font-size: small;font-weight: lighter;">author</p>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star"></span>
-                    <span class="fa fa-star"></span>
-                    <p style="font-weight: bolder; font-size: large;">$999.9</p>
-                </a>
-            </div style="display: flex;">
+            <div class = "course-container"style="display: flex;">
+            </div>
         </div>
 
         </section>
+        <script type ="module" src ="main.js"></script>
 </body>
 </html>
